--- a/index.html
+++ b/index.html
@@ -1,73 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Copiar Datos Bancarios</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-        h2 { color: #2c3e50; }
-        select, button { padding: 10px; margin-top: 10px; font-size: 16px; }
-    </style>
-</head>
-<body>
-    <h2>✅ Datos Bancarios Copiados</h2>
-    <p>Selecciona tu banco para abrir la app o sitio web:</p>
-
-    <select id="banco">
-        <option value="">Selecciona tu banco</option>
-        <option value="bancochile">Banco de Chile</option>
-        <option value="bci">BCI</option>
-        <option value="santander">Santander</option>
-        <option value="scotiabank">Scotiabank</option>
-        <option value="estado">Banco Estado</option>
-        <option value="itau">Itaú</option>
-        <option value="falabella">Banco Falabella</option>
-    </select>
-
-    <br>
-    <button onclick="abrirBanco()">Abrir App o Sitio Web del Banco</button>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            var datosBancarios = "Banco: Falabella\nCuenta: 19998350134\nTitular: Daniela Aravena\nRUT: 16.383.195-3\nTipo de Cuenta: Cuenta Corriente";
-
-
-            navigator.clipboard.writeText(datosBancarios).then(() => {
-                alert("✅ Datos bancarios copiados al portapapeles.");
-            }).catch(err => {
-                alert("❌ Error al copiar. Por favor, copia manualmente.");
-            });
-        });
-
-        function abrirBanco() {
-            var bancoSeleccionado = document.getElementById("banco").value;
-            var enlaces = {
-                "bancochile": { app: "bancochile://transferencia", web: "https://www.bancochile.cl" },
-                "bci": { app: "bci://transferencias", web: "https://www.bci.cl" },
-                "santander": { app: "santander://pago", web: "https://www.santander.cl" },
-                "scotiabank": { app: "scotiabank://home", web: "https://www.scotiabank.cl" },
-                "estado": { app: "bancoestado://transferencias", web: "https://www.bancoestado.cl" },
-                "itau": { app: "itau://inicio", web: "https://www.itau.cl" },
-                "falabella": { app: null, web: "https://www.bancofalabella.cl" }
-            };
-
-            if (bancoSeleccionado && enlaces[bancoSeleccionado]) {
-                var enlaceApp = enlaces[bancoSeleccionado].app;
-                var enlaceWeb = enlaces[bancoSeleccionado].web;
-
-                if (enlaceApp) {
-                    window.location.href = enlaceApp;
-                    setTimeout(function() {
-                        window.location.href = enlaceWeb;
-                    }, 2000);
-                } else {
-                    window.location.href = enlaceWeb;
-                }
-            } else {
-                alert("❌ Selecciona un banco válido.");
-            }
-        }
-    </script>
-</body>
-</html>
+<video id="my-video" class="video-js vjs-default-skin" controls>
+    <source src="http://spotty-cups-rescue.loca.lt/hls/stream.m3u8" type="application/x-mpegURL">
+</video>
